--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "chart.js": "^2.9.3",
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
-    "vue-chartjs": "^3.5.0"
+    "vue-chartjs": "^3.5.0",
+    "vue-js-toggle-button": "^1.3.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.4.0",
