--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
     "vue-chartjs": "^3.5.0",
-    "vue-js-toggle-button": "^1.3.3"
+    "vue-js-toggle-button": "^1.3.3",
+    "vue-mathjax": "0.0.11"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.4.0",
